Fix interaction button legibility

--- a/components/controls/InteractionButtons.module.css
+++ b/components/controls/InteractionButtons.module.css
@@ -1,5 +1,6 @@
 .interaction-control {
   --active-color: var(--primary-text);
+  color: var(--primary-text);
   background: transparent;
   border: none;
   outline: none;
